--- a/index.html
+++ b/index.html
@@ -8,9 +8,25 @@
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <title>ChatGPT</title>
+    <style>
+      img {
+        max-width: 100%;
+      }
+    </style>
   </head>
   <body>
-    <h1>ChatGPT</h1>
+    <nav>
+      <ol>
+        <li><a href="#ChatGPT">ChatGPT</a></li>
+        <li><a href="#Sam Altman">Sam Altman</a></li>
+        <li><a href="#特点和局限">特点和局限</a></li>
+        <li><a href="#服务">服务</a></li>
+        <li><a href="#影响">影响</a></li>
+        <li><a href="#竞争">竞争</a></li>
+        <li><a href="https://gptbot.me/">官网</a></li>
+      </ol>
+    </nav>
+    <h1 id="ChatGPT">ChatGPT</h1>
     <p>
       <strong> 聊天生成型预训练变换模型</strong>
       （英文：Chat Generative Pre-trained Transformer）简称
@@ -20,13 +36,19 @@
       在推广期间，所有人可以免费注册，并在登录后免费使用ChatGPT实现与AI机器人对话
     </p>
     <p>
-      ChatGPT可以写出相似于真人程度的文章，并因其在许多知识领域给出详细的回答和清晰的答案而迅速获得关注，证明了从前认为不会被AI取代的知识型工作它也足以胜任，对于金融与白领人力市场的冲击相当大，但其事实准确性参差不齐被认为是一重大缺陷，其基于意识形态的模型训练结果并被认为需要小心地校正[5][6]。ChatGPT于2022年11月发布后，OpenAI估值已涨至290亿美元[7]。上线两个月后，用户数量达到1亿[8]
+      ChatGPT可以写出相似于真人程度的文章，并因其在许多知识领域给出详细的回答和清晰的答案而迅速获得关注，证明了从前认为不会被AI取代的知识型工作它也足以胜任，对于金融与白领人力市场的冲击相当大，但其事实准确性参差不齐被认为是一重大缺陷，其基于意识形态的模型训练结果并被认为需要小心地校正
+      。ChatGPT于2022年11月发布后，OpenAI估值已涨至290亿美元
+      。上线两个月后，用户数量达到1亿
     </p>
-    <table>
-      <thead></thead>
-      <tbody></tbody>
-    </table>
-    <h2>特点和局限</h2>
+    <h2 id="训练"></h2>
+    <p>
+      ChatGPT是一个生成型预训练变换模型（GPT），使用基于人类反馈的监督学习和强化学习在GPT-3.5之上进行了微调这两种方法都使用了人类训练员来提高模型的性能，通过人类干预以增强机器学习的效果，从而获得更为逼真的结果。在监督学习的情况下，模型被提供了这样一些对话，在对话中训练师充当用户和AI助理两种角色。在强化步骤中，人类训练员首先对模型在先前对话中创建的响应进行评级。这些级别用于创建“奖励模型”，使用近端策略优化（PPO）的多次迭代进一步微调。这种策略优化算法比信任域策略优化
+      region policy optimization）算法更为高效。
+      此外，OpenAI继续从ChatGPT用户那里收集数据，这些数据可用于进一步训练和微调ChatGPT。用户可对他们从ChatGPT收到的回复投赞成票或反对票；在投赞成票或反对票时，他们还可以填写一个带有额外反馈的文本字段。
+      关于ChatGPT编写和调试计算机程序的能力的训练，由于深度学习模型不懂编程，与所有其他基于深度学习的语言模型一样，只是在获取代码片段之间的统计相关性。
+      斯坦福大学的研究发现，GPT3已经可以解决70%的心智理论任务，相当于7岁儿童；至于GPT3.5（ChatGPT的同源模型），更是解决了93%的任务，心智相当于9岁儿童。但这并不意味着，ChatGPT就真正具备了心智理论。可能它即使不被设计到AI系统中，也可以作为“副产品”通过训练得到。因此，相比探究GPT3.5是不是真的有了心智还是像有心智，更需要反思的是这些测试本身。
+    </p>
+    <h2 id="特点和局限">特点和局限</h2>
     <hr />
     <h3>特点</h3>
     <p>
@@ -52,7 +74,7 @@
       。训练数据也存在算法偏差，可能会在ChatGPT被问及人物描述时显现出来
       ，比如当程序接受到首席执行官之类的模糊描述时可能会假设此人是白人男性 。
     </p>
-    <h2>服务</h2>
+    <h2 id="服务">服务</h2>
     <hr />
     <p>
       ChatGPT于2022年11月30日由总部位于旧金山的OpenAI推出。该服务最初是免费向公众推出的，并计划以后通过该服务获利
@@ -108,12 +130,41 @@
       。
       2023年2月22日，浙江大学医学院附属第一医院精神卫生科医生吕海龙让ChatGPT做一套中国执业医师考试卷，满分100分，ChatGPT的成绩是57分，没及格。
     </p>
-    <h2>Sam Altman</h2>
+    <h2 id="Sam Altman">Sam Altman</h2>
+    <hr />
     <p>
       ChatGPT的母公司是OpenAI，OpenAI的创始人Sam Altman在2005年
       (19岁)成立了位置服务提供商Loopt，2012年以4300万美元估值被收购，2014年上任YCombinator总裁，2019年正式上任他和马斯克共同创立的OpenAI公司，也正是在这一年他写下了一篇博客How
       To Be Successful如何才能成功
     </p>
-    <div><img max-witch:100% src="images/sam1.jpg" alt="sam" /></div>
+    <div>
+      <a href="images/sam1.jpg" target="_blank"
+        ><img width="600" src="images/sam1.jpg" alt="sam"
+      /></a>
+    </div>
+    <h2 id="影响">影响</h2>
+    <hr />
+    <strong>学术界</strong>
+    <p>
+      《大西洋月刊》的Stephen
+      Marche指出它对学术界，尤其是入学申请论文的影响还有待了解。加州高中教师兼作家丹尼尔·赫尔曼（Daniel
+      Herman）写道，ChatGPT 将迎来“高中英语的终结”。普林斯顿大学的高年级本科生
+      Edward Tian 创建了“GPTZero”——一个基于GitHub
+      Copilot构建的应用程序，它可以扫描文本以确定是否是另一个 AI
+      编写的，打击滥用。
+      自2023年1月4日起，纽约市教育局已限制从其公立学校互联网和设备访问ChatGPT。
+      自2023年1月24日起，出版商施普林格·自然规定在其旗下所有期刊的论文中，诸如ChatGPT之类的大语言模型不能被列入作者。同月26日，学术期刊《科学》禁止在论文中使用ChatGPT生成的文本，也禁止将ChatGPT署名为作者。
+      2023年2月，香港大学决定禁止在港大所有课堂、作业和评估中使用ChatGPT或其他AI工具
+    </p>
+    <h2 id="竞争">竞争</h2>
+    <hr />
+    <p>
+      ChatGPT的出现和流行增强了科技公司对该领域的兴趣和竞争。2023年2月，Google推出类似于ChatGPT的对话人工智能服务Bard，基于其开发的对话编程语言模型（LaMDA）。Bard根据从网络上收集的信息，对提出的问题生成文本答复。首席执行官孙达尔·皮柴表示该技术将融入Google搜索引擎，部分技术内容将向外部开发者开放。
+      百度也于2023年2月确认类ChatGPT聊天机器人项目名字确定为“文心一言”，英文名ERNIE
+      Bot。
+      中国初创公司元语智能首发ChatYuan，号称向ChatGPT宣战。2023年2月3日，元语智能宣布ChatYuan功能型对话大模型-API已上线。但不久后其微信小程序便无法打开。
+      2023年2月20日晚间，在一些社交平台上开始传播“复旦大学自然语言处理实验室邱锡鹏教授团队推出对话式大型语言模型MOSS”的消息。一时间该项目官网访问量激增，网站开始返回“{"message":"服务器流量过载，请明天上午重试"}”的提示。2月21日，网站访问恢复，并且添加了相关情况的说明。
+    </p>
+    <div style="height: 600px"></div>
   </body>
 </html>
